--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
         <!-- Swiper -->
         <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="image/talk1.png" alt="talk"></div>
-                    <div class="swiper-slide"><img src="image/talk2.png" alt="talk"></div>
-                    <div class="swiper-slide"><img src="image/talk3.png" alt="talk"></div>
-                    <div class="swiper-slide"><img src="image/talk4.png" alt="talk"></div>
-                    <div class="swiper-slide"><img src="image/talk1.png" alt="talk"></div>
-                    <div class="swiper-slide"><img src="image/talk2.png" alt="talk"></div>
-                    <div class="swiper-slide"><img src="image/talk3.png" alt="talk"></div>
-                    <div class="swiper-slide"><img src="image/talk4.png" alt="talk"></div>
+                    <div class="swiper-slide"><img src="image/talk1_72.png" alt="talk"></div>
+                    <div class="swiper-slide"><img src="image/talk2_72.png" alt="talk"></div>
+                    <div class="swiper-slide"><img src="image/talk3_72.png" alt="talk"></div>
+                    <div class="swiper-slide"><img src="image/talk4_72.png" alt="talk"></div>
+                    <div class="swiper-slide"><img src="image/talk1_72.png" alt="talk"></div>
+                    <div class="swiper-slide"><img src="image/talk2_72.png" alt="talk"></div>
+                    <div class="swiper-slide"><img src="image/talk3_72.png" alt="talk"></div>
+                    <div class="swiper-slide"><img src="image/talk4_72.png" alt="talk"></div>
                 </div>
             </div>
         <!-- arrow -->
@@ -297,5 +297,6 @@
 			 </script>	
 
 </body>
+
 
 </html>
