--- a/index.html
+++ b/index.html
@@ -256,11 +256,11 @@
             <div class="info">
                 <p>톡스 주식회사
                     <br>대표 : 김톡톡
-                    <br>주소 : 서울특별시 강남구
+                    <br>주소 : 서울특별시 강남구 강남대로 
                     <br>사업자 등록 번호 : 000-00-00000
                 </p>
             </div>
-            <p class="copy-info"> 2025 talk x Inc. All rights reserved.</p>
+            <p class="copy-info"> &copy; 2025 talk x Inc. All rights reserved.</p>
         </div>
     </footer>
 
@@ -300,4 +300,5 @@
 
 
 </html>
+
 
